--- a/developers.html
+++ b/developers.html
@@ -29,9 +29,9 @@ h1 {letter-spacing: 6px}
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="About.html" class="w3-bar-item w3-button">Home</a>
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
       <button onclick="document.getElementById('cart').style.display='block'" class="w3-bar-item w3-button">Cart</button>
-      <a href="#" class="w3-bar-item w3-button">About the Company</a>
+      <a href="developers.html" class="w3-bar-item w3-button">About the Company</a>
     </div>
   </div>
   <hr>
