--- a/developers.html
+++ b/developers.html
@@ -89,7 +89,7 @@ h1 {letter-spacing: 6px}
           <div class="overlay w3-padding-64 w3-center">
           <h1 class="w3-padding w3-text-white">Mary Gwyneth G. Tenio</h1>
           <h2 class="w3-padding w3-text-white">9-Pinatubo</h2>
-          <p class="w3-padding w3-text-white">No crown is enough to capture your dazzling sight, my precious lovely Queen of the night.</p>
+          <p class="w3-padding w3-text-white">Main Javascript Coder and Lovely Arranger of Flowers</p>
           </div>
         </div>
         </div>
@@ -100,7 +100,7 @@ h1 {letter-spacing: 6px}
             <div class="overlay w3-padding-64 w3-center">
             <h1 class="w3-padding w3-text-white">Brynn Kahlil A. Sales</h1>
             <h2 class="w3-padding w3-text-white">9-Pinatubo</h2>
-            <p class="w3-padding w3-text-white">I cannot breathe when you are not near. I cannot love anyone other but you, my dear.</p>
+            <p class="w3-padding w3-text-white">Code Fixer Upper and Brilliant Painter of Flora</p>
             </div>
           </div>
           </div>
@@ -111,7 +111,7 @@ h1 {letter-spacing: 6px}
               <div class="overlay w3-padding-64 w3-center">
                 <h1 class="w3-padding w3-text-white">Nicolette Anne A. Pinon</h1>
                 <h2 class="w3-padding w3-text-white">9-Pinatubo</h2>
-              <p class="w3-padding w3-text-white">A crown crafted by the hands of the one who has been left dusted in time.</p>
+              <p class="w3-padding w3-text-white">CSS Designer and Enchanting Weaver of Crowns</p>
               </div>
             </div>
             </div>
