--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ h1 {letter-spacing: 6px}
             <div class="container">
               <img src="https://i.pinimg.com/564x/94/af/ac/94afacacc71922b996f6c86f6a1a7bbe.jpg" alt="On My Own Crown" class="image">
               <div class="overlay w3-padding-64 w3-center">
-                <h1 class="w3-padding w3-text-white">On My Crown</h1>
+                <h1 class="w3-padding w3-text-white">On My Own Crown</h1>
                 <h2 class="w3-padding w3-text-white">Php 30.00</h2>
               <p class="w3-padding w3-text-white">A crown crafted by the hands of the one who has been left dusted in time.</p>
               <button class="button w3-button w3-padding-large w3-margin w3-text-white w3-hover-light-grey w3-hover-text-dark-grey" onclick="addToCart('On My Own Crown', 30)">Add to Cart</button>
